# open-library

./: Cargo.toml  LICENSE  README.md  insomnia.yaml
.github/workflows/: build-release.yaml  build.yaml  create-release.yaml  release.yaml
examples/book-cli/: Cargo.toml
examples/book-cli/src/: arguments.rs  main.rs
src/: clients.rs  format.rs  lib.rs  models.rs  tests.rs
src/clients/: account.rs  author.rs  books.rs  works.rs
src/clients/tests/: account.rs  author.rs  books.rs  mod.rs  works.rs
src/clients/tests/author/: get.rs  get_works.rs
src/clients/tests/author/resources/: author.json  author_works.json
src/clients/tests/books/: get.rs  isbn.rs
src/clients/tests/books/resources/: edition.json  isbn.json
src/clients/tests/resources/: already-read.json  book.json  currently-reading.json  search_author.json  want-to-read.json  work.json
src/models/: README.md  account.rs  authors.rs  books.rs  identifiers.rs  works.rs
src/models/tests/: account.rs  authors.rs  books.rs  mod.rs
src/models/tests/resources/author/: get.json  get_works.json  search.json
src/models/tests/resources/books/: all-fields.json  required-fields.json
src/tests/: clients.rs
tests/: tests.rs
